; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_mutex_free.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_mutex_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_THREAD_SAFE_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"sys_mutex_free: m=%p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sys_mutex_free(i32** %0) #0 {
  %2 = alloca i32**, align 8
  store i32** %0, i32*** %2, align 8
  %3 = load i32, i32* @ESP_THREAD_SAFE_DEBUG, align 4
  %4 = load i32**, i32*** %2, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = bitcast i32* %5 to i8*
  %7 = call i32 @LWIP_DEBUGF(i32 %3, i8* %6)
  %8 = load i32**, i32*** %2, align 8
  %9 = load i32*, i32** %8, align 8
  %10 = call i32 @vSemaphoreDelete(i32* %9)
  %11 = load i32**, i32*** %2, align 8
  store i32* null, i32** %11, align 8
  ret void
}

declare dso_local i32 @LWIP_DEBUGF(i32, i8*) #1

declare dso_local i32 @vSemaphoreDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
